# docs/swagger.json
@@ -16,6 +16,38 @@
     },
     "basePath": "/",
     "paths": {
+        "/profile": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Profile returns user data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "View Profile",
+                "operationId": "get-profile-by-email-from-jwt",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "500": {
+                        "description": "fail",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/public/login/": {
             "post": {
                 "description": "post request example",
@@ -25,7 +57,7 @@
                 "produces": [
                     "text/plain"
                 ],
-                "summary": "Create a new User",
+                "summary": "Login logs users in",
                 "parameters": [
                     {
                         "description": "User Info",
@@ -33,12 +65,30 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/controllers.LoginPayload"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
+                        "description": "success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "fail",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/public/signup/": {
+            "post": {
+                "responses": {
+                    "201": {
                         "description": "success",
                         "schema": {
                             "type": "string"
@@ -208,6 +258,17 @@
         }
     },
     "definitions": {
+        "controllers.LoginPayload": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Track": {
             "type": "object",
             "properties": {
@@ -238,6 +299,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
