# middlewares/auth.go
@@ -1,0 +1,53 @@
+package middlewares
+
+import (
+	"crud_go_app/auth"
+	"strings"
+	"fmt"
+
+	"github.com/gin-gonic/gin"
+)
+
+// Authz validates token and authorizes users
+func Authz() gin.HandlerFunc {
+
+	return func(c *gin.Context) {
+
+		clientToken := c.Request.Header.Get("Authorization")
+
+		fmt.Println(clientToken)
+
+		if clientToken == "" {
+			c.JSON(403, "No Authorization header provided")
+			c.Abort()
+			return
+		}
+
+		extractedToken := strings.Split(clientToken, "Bearer ")
+
+		if len(extractedToken) == 2 {
+			clientToken = strings.TrimSpace(extractedToken[1])
+		} else {
+			c.JSON(400, "Incorrect Format of Authorization Token")
+			c.Abort()
+			return
+		}
+
+		jwtWrapper := auth.JwtWrapper{
+			SecretKey: "verysecretkey",
+			Issuer:    "AuthService",
+		}
+
+		claims, err := jwtWrapper.ValidateToken(clientToken)
+		if err != nil {
+			c.JSON(401, err.Error())
+			c.Abort()
+			return
+		}
+
+		c.Set("email", claims.Email)
+
+		c.Next()
+
+	}
+}
